Latest API Updates (#17)
* Added description for person

* Update README.md

* Add MSC

* Add link to API explorer

* Fix alt text

* Rename path to search api so that RESTful and non-REST api's are not intermingled

* Add CORS headers

* Add cors headers to all requests - not just api

* Adds swagger2excel output
  * parser for openapi
  * excel output of openapi
  * docker build run excel generation

* Add description for contact

* Add person search HEAD request

* Remove 'old' file: DefaultAPI

* Adds relationship API CSCDP/family-context-api#7

* Adds search_person_supported implementation and front-end awareness

* Remove ethnicity CSCDP/family-context-api#12

* Rename api path /details/ to /detail/ for consistency CSCDP/family-context-api#9

* Fix missing key on list

* Fix liniting errors

* Fix schema formatter crash on missing properties
