# server/swagger_server/swagger/swagger.yaml
@@ -78,8 +78,23 @@ paths:
                 items:
                   $ref: '#/components/schemas/Person'
                 x-content-type: application/json
+        "501":
+          description: Person search is not supported by this application
       x-openapi-router-controller: swagger_server.controllers.person_controller
-  /api/person/details/{personId}:
+    head:
+      tags:
+      - person
+      summary: Is person search supported
+      description: |
+        Tests whether the person search API is supported by this implementation. A return value of 200 indicates that the operation is supported. A 501 indicates that it is not supported, and any front-end applications should suppress the search functionality.
+      operationId: search_person_supported
+      responses:
+        "200":
+          description: Person search supported
+        "501":
+          description: Person search is not supported by this application
+      x-openapi-router-controller: swagger_server.controllers.person_controller
+  /api/person/detail/{personId}:
     get:
       tags:
       - person
@@ -106,7 +121,7 @@ paths:
           description: Person not found
           content: {}
       x-openapi-router-controller: swagger_server.controllers.person_controller
-  /api/person/details/{personId}/service:
+  /api/person/detail/{personId}/service:
     get:
       tags:
       - person
@@ -135,7 +150,7 @@ paths:
           description: Person not found
           content: {}
       x-openapi-router-controller: swagger_server.controllers.person_controller
-  /api/person/details/{personId}/service/{serviceType}:
+  /api/person/detail/{personId}/service/{serviceType}:
     get:
       tags:
       - person
@@ -170,6 +185,59 @@ paths:
           description: Person or service not found
           content: {}
       x-openapi-router-controller: swagger_server.controllers.person_controller
+  /api/person/related/{personId}/:
+    get:
+      tags:
+      - person
+      summary: Get related individuals
+      description: Returns individuals related to the person
+      operationId: get_person_related
+      parameters:
+      - name: personId
+        in: path
+        description: ID of person
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PersonWithRelationship'
+                x-content-type: application/json
+        "404":
+          description: Person not found
+        "501":
+          description: Related individuals is not supported by this application
+      x-openapi-router-controller: swagger_server.controllers.person_controller
+    head:
+      tags:
+      - person
+      summary: Is related person supported
+      description: |
+        Tests whether the related person API is supported by this implementation. A return value of 200 indicates that the operation is supported. A 501 indicates that it is not supported, and any front-end applications should suppress the functionality.
+      operationId: get_person_related_supported
+      parameters:
+      - name: personId
+        in: path
+        description: ID of person
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: successful operation
+        "501":
+          description: Related individuals is not supported by this application
+      x-openapi-router-controller: swagger_server.controllers.person_controller
 components:
   schemas:
     Person:
@@ -192,8 +260,6 @@ components:
           pattern: '[male|female|other]'
           type: string
           description: The person's gender. Leave blank for 'unknown'.
-        ethnicity:
-          type: string
         address:
           type: string
       description: this is a person
@@ -202,9 +268,20 @@ components:
         lastName: lastName
         address: address
         gender: gender
-        ethnicity: ethnicity
         dateOfBirth: 2000-01-23
         id: id
+    PersonWithRelationship:
+      description: A related person - describes the relationship to an individual
+      allOf:
+      - $ref: '#/components/schemas/Person'
+      - type: object
+        properties:
+          relationship:
+            type: string
+            description: A description of the relationship.
+          relationshipToId:
+            type: string
+            description: The ID of the individual this relationship refers to
     ServiceSummary:
       type: object
       properties:
@@ -359,6 +436,7 @@ components:
           type: string
         role:
           type: string
+      description: Generic object describing the contact information
     inline_response_200:
       required:
       - status
